production/base/workflow-reporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-reporter
  namespace: pipeline
  labels:
    app: workflow-reporter
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: workflow-reporter
